<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFE5EF"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:baselineAligned="false"
        android:contentDescription="@string/localizacao_do_usuario"
        app:srcCompat="@drawable/ic_location_user_foreground"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txtDescrition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/minha_localizacao"
        android:textColor="#2196F3"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/Latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/latitude"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txtLatitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/Longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Longitude"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txtLongitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/LongitudeHere"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtAutor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2196F3"
            android:fontFamily="@font/roboto_light_italic"
            android:padding="8dp"
            android:text="@string/by_henda_dev"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
